Fixed Trash icon spacing and logout button spacing

--- a/styles.css
+++ b/styles.css
@@ -171,9 +171,10 @@ p a:hover{
 
 .trash{
     display:inline-block;
-    position: relative;
+    position: absolute;
     background: none;
-    left: 43%;
+    left: 96%;
+    top: 2px;
 }
 
 .b{
@@ -182,6 +183,7 @@ p a:hover{
 
 .chatDiv{
     border: black solid;
+    position: relative;
     margin-top: 20px;
     text-align: center;
     font-size: 20px;
@@ -212,11 +214,11 @@ p a:hover{
     }
 
    .trashMobile{
-        left: 38%;
+        left: 94%;
     }
 
     #btnLogout{
-        margin: 0 0 0 69%;
+        margin: 0 0 0 60%;
     }
 
     h2{
